ci() reduce docker image size